test_suite/tests/errors/unknown_transition_target_max_iter.rs
use banish::banish;

fn main() {
    banish! {
        #[max_iter = 3 => @nowhere]
        @foo
            step? { return; }
    }
}
